# VoidEngine

./: .gitignore  3DProgEngine.cpp  3DProgEngine.h  CMakeLists.txt  README.md
Documentation/html/: _a_a_b_b_8h_source.html  _actor_8h_source.html  _actor_controller_8h_source.html  _application_8h_source.html  _assimp_loader_8h_source.html  _assimp_utility_8h_source.html  _bounding_sphere_8h_source.html  _camera_8h_source.html  _camera_controller_8h_source.html  _collision_8h_source.html  _component_8h_source.html  _controller_8h_source.html  _defines_8h_source.html  _directional_light_8h_source.html  _geometry_8h_source.html  _lights_8h_source.html  _logger_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _physics_component_8h_source.html  _point_light_8h_source.html  _renderer_8h_source.html  _scene_8h_source.html  _scene_actors_8h_source.html  _shader_8h_source.html  _shared_8h_source.html  _tag_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _types_8h_source.html  _vertex_8h_source.html  _window_8h_source.html  annotated.html  class_actor-members.html  class_actor.html  class_actor_controller-members.html  class_actor_controller.html  class_application-members.html  class_application.html  class_assimp_loader-members.html  (+82 more)
Documentation/html/search/: all_1.js  classes_0.js  classes_2.js  classes_7.js  classes_c.js  searchdata.js
Documentation/latex/: _a_a_b_b_8h_source.tex  _actor_8h_source.tex  _actor_controller_8h_source.tex  _application_8h_source.tex  _assimp_loader_8h_source.tex  _assimp_utility_8h_source.tex  _bounding_sphere_8h_source.tex  _camera_8h_source.tex  _camera_controller_8h_source.tex  _collision_8h_source.tex  _component_8h_source.tex  _controller_8h_source.tex  _defines_8h_source.tex  _directional_light_8h_source.tex  _geometry_8h_source.tex  _lights_8h_source.tex  _logger_8h_source.tex  _material_8h_source.tex  _mesh_8h_source.tex  _physics_component_8h_source.tex  _point_light_8h_source.tex  _renderer_8h_source.tex  _scene_8h_source.tex  _scene_actors_8h_source.tex  _shader_8h_source.tex  _shared_8h_source.tex  _tag_8h_source.tex  _texture_8h_source.tex  _transform_8h_source.tex  _types_8h_source.tex  _vertex_8h_source.tex  _window_8h_source.tex  annotated.tex  class_actor.eps  class_actor.tex  class_actor_controller.tex  class_application.tex  class_assimp_loader.tex  class_base_actor.eps  class_base_actor.tex  (+37 more)
EngineAssets/Models/Ground/: EasyPlane.blend  EasyPlane.fbx  UneavenPlane.blend  UneavenPlane.fbx
EngineAssets/Models/Monkey/: Monke.blend
UserAssets/Models/Monkey/: Monke.fbx
assets/: untitled.fbx
assets/Models/Ground/: EasyPlane.blend  EasyPlane.blend1  EasyPlane.fbx  UneavenPlane.blend  UneavenPlane.blend1  UneavenPlane.fbx
assets/Models/Monkey/: Monke.blend  Monke.blend1  Monke.fbx
assets/Models/Sponza/: Monketest.blend  Monketest.blend1  monkeCollish.fbx  sponza.mtl
assets/Models/StoneScene/: StoneScene.fbx  stonescene.blend  stonescene.blend1
includes/: glad.c  stb_image.h
includes/glad/: glad.h
includes/imgui/: imgui.cpp
includes/imgui Old/: imgui_impl_glfw.cpp
libs/LASzip/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LASZIP.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  laszipdll.sln  laszipdll.vcxproj  liblaszip.vcxproj  liblaszip_static.vcxproj
libs/LASzip/dll/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  laszip_api3.vcxproj  laszip_api3.vcxproj.filters
libs/LASzip/lib/: laszip3.exp
libs/LASzip/src/: INSTALL.vcxproj  (+5 more)
shaderSrc/: DebugShader.fs  DefaultShader.fs  DefaultShader.vs  GraphShader.fs  PointCloudShader.fs  PointCloudShader.vs  TerrainShader.fs  TerrainShader.vs  shader.fs  shader.vs
src/: AABB.cpp  AABB.h  Actor.cpp  Actor.h  ActorController.cpp  ActorController.h  Application.cpp  Application.h  BoundingSphere.cpp  BoundingSphere.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Collision.cpp  Collision.h  Component.h  Controller.h  Defines.h  Geometry.h  LifeTime.cpp  LifeTime.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OctTree.cpp  OctTree.h  PhysicsComponent.cpp  PhysicsComponent.h  Renderer.h  SLifeTime.cpp  SLifeTime.h  Scene.cpp  Scene.h  SceneActors.cpp  SceneActors.h  SceneGraph.h  Shader.cpp  (+9 more)
src/Collision/: AABB.cpp  AABB.h  BoundingSphere.cpp  BoundingSphere.h  Collision.cpp  Collision.h  CollisionProperties.h
src/Components/: AIComponent.cpp  AIComponent.h  AISystem.cpp  AISystem.h  CollisionComponent.cpp  CollisionComponent.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  HealthComponent.cpp  HealthComponent.h  HealthSystem.cpp  HealthSystem.h  InventoryComponent.cpp  InventoryComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  System.h
src/Controllers/: ActorController.cpp  ActorController.h  CameraController.cpp  CameraController.h  Controller.h
src/Core/: Application.cpp  Application.h  SMath.cpp  SMath.h  SSpawner.cpp  SSpawner.h  Shader.cpp  Shader.h  Tag.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/LevelActors/: BaseActor.cpp  BaseActor.h  CameraActor.cpp  CameraActor.h  DebugActor.cpp  DebugActor.h  GraphActor.cpp  GraphActor.h  SceneGraph.h  VisualActor.cpp  VisualActor.h
src/Levels/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h
src/Lights/: DirectionalLight.h  Lights.h  PointLight.h
src/Lua/: LuaReader.cpp  LuaReader.h
src/ModelLoader/: AssimpLoader.cpp  AssimpLoader.h  AssimpUtility.h  Shared.h
src/OutDated/: AABB.cpp  AABB.h  BoundingSphere.cpp  BoundingSphere.h  CameraController.cpp  CameraController.h  Geometry.h  Scene.cpp  Scene.h  UIController.cpp  UIController.h
src/RenderElements/: DebugVertex.h  GraphPoint.cpp  GraphPoint.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Vertex.h
src/SkyBox/: Skybox.cpp  Skybox.h
src/UserInterface/: UserInterfaceManager.cpp  UserInterfaceManager.h
src/Utilities/: Defines.h  Logger.h
(+20 files in other folders)
